RevokeEvents now walks the chain to elder queues. bug 65243 r=buster,kmcclusk,pavlov